syntax = "proto3";

option csharp_namespace = "Ozon256.WeatherSensors.SensorsEmulatorService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package Greeter;

service Sensors {
  rpc GetSensorsData(stream ActionMessage) returns (stream SensorDataResponse);
}

message SensorDataResponse
{
  string guid = 1;
  int32 temperature = 2;
  int32 humidity = 3;
  int32 ppm = 4;
  SensorType sensorType = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message ActionMessage {
  oneof action {
    AddSensorRequest add = 1;
    RemoveSensorRequest remove = 2;
  }
}

message AddSensorRequest {
  repeated string guid = 1;
  SensorType sensorType = 2;
}

message RemoveSensorRequest {
  string guid = 1;
}

enum SensorType {
  INSIDE = 0;
  OUTSIDE = 1;
}
